--- a/css/lawyer-style.css
+++ b/css/lawyer-style.css
@@ -82,6 +82,13 @@ h2 {
     margin-left: 60%;
 }
 
+.sector-paragraph{
+    text-align: justify;
+    color: black;
+    font-size: 11px;
+    line-height: 1.4;
+}
+
 @media (min-device-width: 768px) {
     .lawyer-list-items {
         margin-left: 10%;
